--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Run Jodot entirely within Azure Functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "funcpack pack ."
   },
   "repository": {
     "type": "git",
