Retrieve with azure-storage SDK

--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
   },
   "homepage": "https://github.com/jodot/jodot-azure-functions#readme",
   "dependencies": {
+    "azure-storage": "^2.8.0",
+    
   }
 }
